--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node prisma/seed.ts",
+    "migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
