login functions started

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-APP_NAME="Онлайн шалгалт"
-APP_DESC="Шалгалтын программ"
+APP_NAME=
+APP_DESC=
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+JWT_SECRET=
